# hse_cg_hitmap

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  webs.py
app/: main.py  models.py  video_processor.py
app/static/: style.css
app/templates/: index.html
